[package]
name = "noiz"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.8.5"
rand_core = "0.6.0"
bevy_math = "0.15.1"
flagset = "0.4.5"
macros = { path = "macros" }
bumpalo = {version = "3.17.0", features = ["default", "collections"]}

[dev-dependencies]
criterion = "0.5.1"
noise = "0.9.0"     # for benchmarking against
bevy = "0.15.1"     # for displaying images of the noise

[profile.dev]
opt-level = 3

[[example]]
name = "print_random"
path = "examples/print_random.rs"
